Change suffixWithUnit.cpp and add another way of sending input

--- a/suffixWithUnit/.vscode/settings.json
+++ b/suffixWithUnit/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "files.associations": {
         "*.cpp": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "__bit_reference": "cpp",
+        "bitset": "cpp",
+        "chrono": "cpp",
+        "unordered_map": "cpp"
     }
 }
